# YAAL

./: .gitignore  CMakeLists.txt  Music.h  README.md  Sound.cpp  Sound.h  TODO  cmake_install.cmake  log.txt  main.cpp
Example/: CMakeLists.txt  Example  cmake_install.cmake  main.cpp
